--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Learning Node.js, Express and MongoDB",
   "main": "app.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
-    "start:prod": "NODE_ENV=production nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +17,6 @@
   },
   "homepage": "https://github.com/jnyVerdi/learn-nodejs-express-and-mongodb#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
